# MachineGenetics

./: .env.example  .gitignore  AB_INITIO_DESIGN.md  AGENTIC_IR_DESIGN.md  AGENT_PROTOCOL.md  ARCHITECTURE.md  ARCHITECTURE_DSL.md  Cargo.toml  DIRECT_CODEGEN_STRATEGY.md  IDEAL_AGENTIC_LANGUAGE.md  LICENSE  MAGE_ECOSYSTEM.md  MAGE_ONTOLOGY.json  MAGE_ONTOLOGY.md  MAGE_PROPOSAL.md  MAGE_SPEC.md  MEASUREMENTS.md  MECHGEN_ECOSYSTEM.md  MECHGEN_ONTOLOGY.json  MECHGEN_ONTOLOGY.md  MECHGEN_PROPOSAL.md  MECHGEN_SPEC.md  PERFORMANCE_STRATEGY.md  README.md  REDOX_BENCHMARKS.md  REDOX_ECOSYSTEM.md  REDOX_PROPOSAL.md  REDOX_SPEC.md  REDOX_SPEC.md.bak  RELEASES.md  REUSE.toml  ROADMAP.md  ROADMAP_PRODUCTION.md  SECURITY_AUDIT.md  SPINE_COLLABORATION.md  UNIFICATION.md  rustfmt.toml  triagebot.toml  typos.toml
RecursiveMachineIntelligence/: Cargo.toml  README.md  ROADMAP.md  deny.toml
RecursiveMachineIntelligence/.github/workflows/: ci.yml
RecursiveMachineIntelligence/benches/: benchmark.rs
RecursiveMachineIntelligence/docs/: api.md  architecture.md  ontology.md  protocol.md
RecursiveMachineIntelligence/examples/: agent_communication.rs  architecture_search.rs  benchmark_comparison.rs  end_to_end_pipeline.rs  neurosymbolic_reasoning.rs  pgo_training.rs  self_aware_architect.rs  swarm_collaboration.rs  training_pipeline.rs
RecursiveMachineIntelligence/paper/: rmi.typ
RecursiveMachineIntelligence/src/: lib.rs
RecursiveMachineIntelligence/src/compute/: apple_ane.rs  blas.rs  cpu.rs  cuda.rs  cuda_full.rs  fusion.rs  metal.rs  mod.rs  qualcomm.rs  vulkan.rs  wasm.rs  webgpu.rs  wgpu_backend.rs
RecursiveMachineIntelligence/src/core/: agent.rs  codegen.rs  collaboration.rs  discoverability.rs  emitters.rs  introspection.rs  manifest.rs  message_bus.rs  mod.rs  ontology.rs  optimization.rs  primitives.rs  protocol.rs  storage.rs  swarm.rs  verification.rs
RecursiveMachineIntelligence/src/distributed/: consensus.rs  discovery.rs  federation.rs  mod.rs  transport.rs
RecursiveMachineIntelligence/src/evolution/: meta_learning.rs  mod.rs  population.rs  self_modification.rs
RecursiveMachineIntelligence/src/knowledge/: ai_concepts.rs  history.rs  mod.rs
RecursiveMachineIntelligence/src/lang/: agent_bridge.rs  codec.rs  debugger.rs  expr.rs  ffi.rs  grad.rs  incremental.rs  jit.rs  lsp.rs  mod.rs  op.rs  pattern_match.rs  quantize.rs  registry.rs  sparse.rs  sym.rs  syntax.rs  tensor_rt.rs  ty.rs  vm.rs
RecursiveMachineIntelligence/src/neural/: architecture.rs  autodiff.rs  extended_layers.rs  federated.rs  layers.rs  loss.rs  mod.rs  optim.rs  primitives.rs  serialization.rs  training.rs
RecursiveMachineIntelligence/src/neurosymbolic/: constraint.rs  embedding.rs  hybrid.rs  mod.rs
RecursiveMachineIntelligence/src/runtime/: deployment.rs  memory_pool.rs  mod.rs  observability.rs
RecursiveMachineIntelligence/src/symbolic/: inference.rs  logic.rs  mod.rs  planner.rs  unification.rs
RecursiveMachineIntelligence/tests/: integration_tests.rs  neural_tests.rs  proptest_fuzz.rs  proptest_ir.proptest-regressions  proptest_ir.rs  proptest_protocol.rs
compiler/redox/: Cargo.toml  build.rs
compiler/redox/src/: main.rs
compiler/redox_abi/: Cargo.toml
compiler/redox_abi/src/: canon_abi.rs  extern_abi.rs  layout.rs  lib.rs
compiler/redox_ast/: Cargo.toml
compiler/redox_ast/src/: ast.rs  entry.rs  format.rs  lib.rs  mut_visit.rs  node_id.rs  token.rs  tokenstream.rs  visit.rs
compiler/redox_ast_ir/: Cargo.toml
compiler/redox_ast_ir/src/: lib.rs
compiler/redox_ast_lowering/: Cargo.toml
compiler/redox_ast_lowering/src/: asm.rs  block.rs  contract.rs  delegation.rs  errors.rs  expr.rs  format.rs  index.rs  item.rs  lib.rs  pat.rs  path.rs  stability.rs
compiler/redox_ast_passes/: Cargo.toml
compiler/redox_ast_passes/src/: ast_validation.rs  errors.rs  feature_gate.rs  lib.rs
compiler/redox_ast_pretty/: Cargo.toml
compiler/redox_attr_parsing/: Cargo.toml
compiler/redox_attr_parsing/src/: context.rs  early_parsed.rs  interface.rs  lib.rs  parser.rs  safety.rs  session_diagnostics.rs  target_checking.rs  validate_attr.rs
compiler/redox_borrowck/: Cargo.toml
compiler/redox_builtin_macros/: Cargo.toml
compiler/redox_codegen_llvm/: Cargo.toml
compiler/redox_codegen_ssa/: Cargo.toml
compiler/redox_const_eval/: Cargo.toml
compiler/redox_diagnostics/: Cargo.toml
compiler/redox_driver/: Cargo.toml  build.rs
compiler/redox_driver_impl/: Cargo.toml
compiler/redox_error_messages/: Cargo.toml
compiler/redox_errors/: Cargo.toml
compiler/redox_expand/: Cargo.toml
compiler/redox_feature/: Cargo.toml
compiler/redox_hir/: Cargo.toml
compiler/redox_hir_analysis/: Cargo.toml
compiler/redox_hir_id/: Cargo.toml
compiler/redox_hir_pretty/: Cargo.toml
compiler/redox_hir_typeck/: Cargo.toml
compiler/redox_incremental/: Cargo.toml
forge/: Cargo.toml  README.md
forge/config/: forge-config.toml  module-schema.json
forge/src/: lib.rs  main.rs  manifest.rs  project.rs
forge/tests/: integration.rs
prototype/: Cargo.toml
prototype/data/: training_samples.jsonl
prototype/docs/: AGENT_GUIDE.md  BOOK.md  COOKBOOK.md  INTERNALS.md  LANGUAGE_SPEC.md
prototype/examples/: agent_built_mlp.mg  agent_rpn.mg  agent_tiny_lm.mg  analysis.mg  analysis.rdx  effects.mg  effects.rdx  hello.mg  hello.rdx  pipeline_demo.mg  pipeline_demo.rdx  real_mlp.mg  sandboxed_agent.mg  sandboxed_agent.rx  spec_synthesis.mg  spec_synthesis.rx  structs.mg  structs.rdx  swarm_audit.rx  tiny_lm.mg  train_csv.mg  train_demo.mg  train_infer.mg  unified.mg  vision.mg
prototype/src/: abl.rs  abl_bridge.rs  abl_compute.rs  abl_shape.rs  aci.rs  agent_runtime.rs  ast.rs  autograd.rs  backends.rs  bench.rs  builder.rs  certs.rs  cli_manifest.rs  codegen_bridge.rs  consensus.rs  cost.rs  cost_calibration.rs  crdt.rs  cuda_backend.rs  decompose.rs  effects.rs  elision.rs  eval.rs  evolve_gen.rs  ffi_gen.rs  fmt.rs  forge.rs  fuzz.rs  grammar.rs  heal.rs  hir.rs  hot_reload.rs  lease.rs  legacy.rs  lexer.rs  logic.rs  machine.rs  machine_bridge.rs  machine_compute.rs  machine_shape.rs  (+31 more)
(+5746 files in other folders)
