[workspace]
resolver = "2"
members = [
  # tidy-alphabetical-start
  "compiler/MechGen",
  "compiler/mechgen_diagnostics",
  "compiler/mechgen_agent_attrs",
  "compiler/mechgen_attr_compress",
  "compiler/mechgen_cost_oracle",
  "compiler/mechgen_crdt_merge",
  "compiler/mechgen_message_bus",
  "compiler/mechgen_backend_targets",
  "compiler/mechgen_integration_tests",
  "compiler/mechgen_semantic_lease",
  "compiler/mechgen_token_budget",
  "compiler/mechgen_capability_manifest",
  "compiler/mechgen_consensus",
  "compiler/mechgen_capability_system",
  "compiler/mechgen_mlir",
  "compiler/mechgen_mlir_targets",
  "compiler/mechgen_mlir_spirv",
  "compiler/mechgen_mlir_autotune",
  "compiler/mechgen_device_placement",
  "compiler/mechgen_mlir_parallel",
  "compiler/mechgen_aci_codebase_model",
  "compiler/mechgen_aci_warnings",
  "compiler/mechgen_aci_debugger",
  "compiler/mechgen_aci_perf_advisor",
  "compiler/mechgen_aci_swarm_intel",
  "compiler/mechgen_aci_rap",
  "compiler/mechgen_phase2_integration",
  "compiler/mechgen_effect_system",
  "compiler/mechgen_contracts",
  "compiler/mechgen_refinement_types",
  "compiler/mechgen_capability_blocks",
  "compiler/mechgen_perf_annotations",
  "compiler/mechgen_repr_target_optimal",
  "compiler/mechgen_formal_spec",
  "compiler/mechgen_synthesis_oracle",
  "compiler/mechgen_pipeline_compose",
  "compiler/mechgen_grammar_extension",
  "compiler/mechgen_abbrev_promotion",
  "compiler/mechgen_agent_memory",
  "compiler/mechgen_memory_recall_api",
  "compiler/mechgen_agentic_stdlib",
  "compiler/mechgen_token_frequency",
  "compiler/mechgen_abbrev_registry_v2",
  "compiler/mechgen_edition_2026",
  "compiler/mechgen_verification_cert",
  "compiler/mechgen_swarm_hierarchy",
  "compiler/mechgen_mlir_pipeline",
  "compiler/mechgen_package_registry",
  "compiler/mechgen_ecosystem_migrate",
  "compiler/mechgen_swarm_marketplace",
  "compiler/mechgen_safety_certify",
  "compiler/mechgen_lang_spec",
  "compiler/mechgen_swarm_configs",
  "compiler/mechgen_swarm_bench",
  "compiler/mechgen_skb_corpus",
  "compiler/mechgen_global_memory",
  "compiler/mechgen_synthesis_market",
  "compiler/mechgen_cost_calibrate",
  "compiler/mechgen_hot_reload",
  "compiler/mechgen_ffi",
  "compiler/mechgen_sandbox",
  "compiler/mechgen_agentic_bench",
  "compiler/mechgen_swarm_patterns",
  "compiler/mechgen_self_heal",
  "compiler/mechgen_query",
  "compiler/mechgen_rap",
  "compiler/mechgen_rap_protocol",
  "compiler/mechgen_rap_ide",
  "compiler/mechgen_safety_cfg",
  "compiler/mechgen_semantic_index",
  "compiler/mechgen_semantic_vcs",
  "compiler/mechgen_swarm_audit",
  "compiler/mechgen_skb",
  "compiler/mechgen_swarm",
  "compiler/mechgen_task_decomposition",
  "compiler/mechgen_verification_oracle",
  "src/build_helper",
  "src/rustc-std-workspace/rustc-std-workspace-alloc",
  "src/rustc-std-workspace/rustc-std-workspace-core",
  "src/rustc-std-workspace/rustc-std-workspace-std",
  "src/rustdoc-json-types",
  "src/tools/build-manifest",
  "src/tools/bump-stage0",
  "src/tools/cargotest",
  "src/tools/clippy",
  "src/tools/clippy/clippy_dev",
  "src/tools/collect-license-metadata",
  "src/tools/compiletest",
  "src/tools/coverage-dump",
  "src/tools/features-status-dump",
  "src/tools/generate-copyright",
  "src/tools/generate-windows-sys",
  "src/tools/html-checker",
  "src/tools/jsondocck",
  "src/tools/jsondoclint",
  "src/tools/linkchecker",
  "src/tools/lint-docs",
  "src/tools/lld-wrapper",
  "src/tools/llvm-bitcode-linker",
  "src/tools/miri",
  "src/tools/miri/cargo-miri",
  "src/tools/miropt-test-tools",
  "src/tools/opt-dist",
  "src/tools/redoxfmt",
  "src/tools/remote-test-client",
  "src/tools/remote-test-server",
  "src/tools/replace-version-placeholder",
  "src/tools/run-make-support",
  "src/tools/rust-installer",
  "src/tools/rust2redox",
  "src/tools/rustdoc",
  "src/tools/rustdoc-gui-test",
  "src/tools/rustdoc-themes",
  "src/tools/rustfmt",
  "src/tools/test-float-parse",
  "src/tools/tidy",
  "src/tools/tier-check",
  "src/tools/unicode-table-generator",
  "src/tools/unstable-book-gen",
  "src/tools/wasm-component-ld",
  "src/tools/x",
  # tidy-alphabetical-end
]

exclude = [
  "build",
  "compiler/mechgen_codegen_cranelift",
  "compiler/mechgen_codegen_gcc",
  "src/bootstrap",
  "tests/rustdoc-gui",
  # HACK(eddyb) This hardcodes the fact that our CI uses `/checkout/obj`.
  "obj",
]

[profile.release.package.mechgen_thread_pool]
# The MechGen fork of Rayon has deadlock detection code which intermittently
# causes overflows in the CI (see https://github.com/rust-lang/rust/issues/90227)
# so we turn overflow checks off for now.
# FIXME: This workaround should be removed once #90227 is fixed.
overflow-checks = false

# These are very thin wrappers around executing lld with the right binary name.
# Basically nothing within them can go wrong without having been explicitly logged anyway.
# We ship these in every MechGen tarball and even after compression they add up
# to around 0.6MB of data every user needs to download (and 15MB on disk).
[profile.release.package.lld-wrapper]
debug = 0
strip = true
[profile.release.package.wasm-component-ld-wrapper]
debug = 0
strip = true

# Bigint libraries are slow without optimization, speed up testing
[profile.dev.package.test-float-parse]
opt-level = 3

# Speed up the binary as much as possible
[profile.release.package.test-float-parse]
opt-level = 3
codegen-units = 1
# FIXME: LTO cannot be enabled for binaries in a workspace
# <https://github.com/rust-lang/cargo/issues/9330>
# lto = true

# If you want to use a crate with local modifications, you can set a path or git dependency here.
# For git dependencies, also add your source to ALLOWED_SOURCES in src/tools/tidy/src/extdeps.rs.
#[patch.crates-io]
