[workspace]

[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "Forge — Redox package registry server and client library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nervosys/Redox"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
toml = "0.8"
thiserror = "2"

[dev-dependencies]

[[bin]]
name = "forge-server"
path = "src/main.rs"
