[workspace]

[package]
name = "forge"
version = "0.2.0"
edition = "2021"
description = "Forge — MAGE package registry server and client library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nervosys/MAGE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
toml = "0.8"
thiserror = "2"
sha2 = "0.10"

[dev-dependencies]

[[bin]]
name = "forge-server"
path = "src/main.rs"
