[workspace]

[package]
name = "MechGen-prototype"
version = "0.1.0"
edition = "2024"
description = "Prototype lexer, parser, and RAP server for the MechGen agentic language"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "MechGen-parse"
path = "src/main.rs"
