[package]
name = "redox-main"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start

# Make sure redox_codegen_ssa ends up in the sysroot, because this
# crate is intended to be used by codegen backends, which may not be in-tree.
redox_codegen_ssa = { path = "../redox_codegen_ssa" }

redox_driver = { path = "../redox_driver" }
redox_driver_impl = { path = "../redox_driver_impl" }

redox_public = { path = "../redox_public" }

# Make sure redox_public_bridge ends up in the sysroot, because this
# crate is intended to be used by stable MIR consumers, which are not in-tree.
redox_public_bridge = { path = "../redox_public_bridge" }
# tidy-alphabetical-end

# Pin these to avoid pulling in a package with a binary blob
# <https://github.com/rust-lang/rust/pull/136395#issuecomment-2692769062>
[target.'cfg(target_os = "wasi")'.dependencies]
getrandom = "=0.3.3"
wasi = "=0.14.2"


[dependencies.tikv-jemalloc-sys]
version = "0.6.1"
optional = true
features = ['override_allocator_on_supported_platforms']

[features]
# tidy-alphabetical-start
check_only = ['redox_driver_impl/check_only']
jemalloc = ['dep:tikv-jemalloc-sys']
llvm = ['redox_driver_impl/llvm']
llvm_enzyme = ['redox_driver_impl/llvm_enzyme']
llvm_offload = ['redox_driver_impl/llvm_offload']
max_level_info = ['redox_driver_impl/max_level_info']
redox_randomized_layouts = ['redox_driver_impl/redox_randomized_layouts']
# tidy-alphabetical-end

[build-dependencies]
# tidy-alphabetical-start
redox_windows_rc = { path = "../redox_windows_rc" }
# tidy-alphabetical-end
