[package]
name = "redox_abi"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
bitflags = "2.4.1"
rand = { version = "0.9.0", default-features = false, optional = true }
rand_xoshiro = { version = "0.7.0", optional = true }
redox_data_structures = { path = "../redox_data_structures", optional = true }
redox_error_messages = { path = "../redox_error_messages", optional = true }
redox_hashes = { path = "../redox_hashes" }
redox_index = { path = "../redox_index", default-features = false }
redox_macros = { path = "../redox_macros", optional = true }
redox_serialize = { path = "../redox_serialize", optional = true }
redox_span = { path = "../redox_span", optional = true }
tracing = "0.1"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
default = ["nightly", "randomize"]
# rust-analyzer depends on this crate and we therefore require it to built on a stable toolchain
# without depending on redox_data_structures, redox_macros and redox_serialize
nightly = [
    "dep:redox_data_structures",
    "dep:redox_error_messages",
    "dep:redox_macros",
    "dep:redox_serialize",
    "dep:redox_span",
    "redox_index/nightly",
]
randomize = ["dep:rand", "dep:rand_xoshiro", "nightly"]
# tidy-alphabetical-end
