[package]
name = "redox_ast"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
bitflags = "2.4.1"
memchr = "2.7.6"
rustc-literal-escaper = "0.0.7"
redox_ast_ir = { path = "../redox_ast_ir" }
redox_data_structures = { path = "../redox_data_structures" }
redox_index = { path = "../redox_index" }
redox_macros = { path = "../redox_macros" }
redox_serialize = { path = "../redox_serialize" }
redox_span = { path = "../redox_span" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
# tidy-alphabetical-end
