[package]
name = "redox_ast_passes"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
itertools = "0.12"
redox_abi = { path = "../redox_abi" }
redox_ast = { path = "../redox_ast" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_attr_parsing = { path = "../redox_attr_parsing" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_feature = { path = "../redox_feature" }
redox_hir = { path = "../redox_hir" }
redox_macros = { path = "../redox_macros" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
redox_target = { path = "../redox_target" }
thin-vec = "0.2.12"
# tidy-alphabetical-end
