[package]
name = "redox_borrowck"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
either = "1.5.0"
itertools = "0.12"
polonius-engine = "0.13.0"
redox_abi = { path = "../redox_abi" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_graphviz = { path = "../redox_graphviz" }
redox_hir = { path = "../redox_hir" }
redox_index = { path = "../redox_index" }
redox_infer = { path = "../redox_infer" }
redox_lexer = { path = "../redox_lexer" }
redox_macros = { path = "../redox_macros" }
redox_middle = { path = "../redox_middle" }
redox_mir_dataflow = { path = "../redox_mir_dataflow" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
redox_trait_selection = { path = "../redox_trait_selection" }
redox_traits = { path = "../redox_traits" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
tracing = "0.1"
# tidy-alphabetical-end
