[package]
name = "redox_builtin_macros"
version = "0.0.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
# tidy-alphabetical-start
redox_ast = { path = "../redox_ast" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_attr_parsing = { path = "../redox_attr_parsing" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_expand = { path = "../redox_expand" }
redox_feature = { path = "../redox_feature" }
redox_hir = { path = "../redox_hir" }
redox_index = { path = "../redox_index" }
redox_lexer = { path = "../redox_lexer" }
redox_lint_defs = { path = "../redox_lint_defs" }
redox_macros = { path = "../redox_macros" }
redox_parse = { path = "../redox_parse" }
redox_parse_format = { path = "../redox_parse_format" }
# We must use the proc_macro version that we will compile proc-macros against,
# not the one from our own sysroot.
redox_proc_macro = { path = "../redox_proc_macro" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
redox_target = { path = "../redox_target" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
llvm_enzyme = []
# tidy-alphabetical-end
