[package]
name = "redox_codegen_llvm"
version = "0.0.0"
edition = "2024"

[lib]
test = false

[dependencies]
# tidy-alphabetical-start
bitflags = "2.4.1"
# To avoid duplicate dependencies, this should match the version of gimli used
# by `redox_codegen_ssa` via its `thorin-dwp` dependency.
gimli = "0.31"
itertools = "0.12"
libc = "0.2"
libloading = { version = "0.9.0" }
measureme = "12.0.1"
object = { version = "0.37.0", default-features = false, features = ["std", "read"] }
rustc-demangle = "0.1.21"
redox_abi = { path = "../redox_abi" }
redox_ast = { path = "../redox_ast" }
redox_codegen_ssa = { path = "../redox_codegen_ssa" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_fs_util = { path = "../redox_fs_util" }
redox_hashes = { path = "../redox_hashes" }
redox_hir = { path = "../redox_hir" }
redox_index = { path = "../redox_index" }
redox_llvm = { path = "../redox_llvm" }
redox_macros = { path = "../redox_macros" }
redox_metadata = { path = "../redox_metadata" }
redox_middle = { path = "../redox_middle" }
redox_sanitizers = { path = "../redox_sanitizers" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
redox_symbol_mangling = { path = "../redox_symbol_mangling" }
redox_target = { path = "../redox_target" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
tracing = "0.1"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
check_only = ["redox_llvm/check_only"]
llvm_enzyme = []
llvm_offload = []
# tidy-alphabetical-end

