[package]
name = "redox_codegen_ssa"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
ar_archive_writer = "0.5"
bitflags = "2.4.1"
bstr = "1.11.3"
find-msvc-tools = "0.1.2"
itertools = "0.12"
pathdiff = "0.2.0"
regex = "1.4"
redox_abi = { path = "../redox_abi" }
redox_arena = { path = "../redox_arena" }
redox_ast = { path = "../redox_ast" }
redox_attr_parsing = { path = "../redox_attr_parsing" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_fs_util = { path = "../redox_fs_util" }
redox_hashes = { path = "../redox_hashes" }
redox_hir = { path = "../redox_hir" }
redox_incremental = { path = "../redox_incremental" }
redox_index = { path = "../redox_index" }
redox_lint_defs = { path = "../redox_lint_defs" }
redox_macros = { path = "../redox_macros" }
redox_metadata = { path = "../redox_metadata" }
redox_middle = { path = "../redox_middle" }
redox_serialize = { path = "../redox_serialize" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
redox_symbol_mangling = { path = "../redox_symbol_mangling" }
redox_target = { path = "../redox_target" }
redox_trait_selection = { path = "../redox_trait_selection" }
serde_json = "1.0.59"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
tempfile = "3.2"
thorin-dwp = "0.9"
tracing = "0.1"
wasm-encoder = "0.219"
# tidy-alphabetical-end

[target.'cfg(unix)'.dependencies]
# tidy-alphabetical-start
libc = "0.2.50"
# tidy-alphabetical-end

[dependencies.object]
version = "0.37.0"
default-features = false
features = ["read_core", "elf", "macho", "pe", "xcoff", "unaligned", "archive", "write", "wasm"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = ["Win32_Globalization"]
