[package]
name = "redox_diagnostics"
version = "0.1.0"
edition = "2021"
description = "Structured Diagnostics Protocol for the Redox compiler"
license = "MIT OR Apache-2.0"

[lib]
name = "redox_diagnostics"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
