[package]
name = "redox_driver"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
# tidy-alphabetical-start
redox_driver_impl = { path = "../redox_driver_impl" }
# tidy-alphabetical-end

[build-dependencies]
# tidy-alphabetical-start
redox_windows_rc = { path = "../redox_windows_rc" }
# tidy-alphabetical-end
