[package]
name = "redox_error_messages"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
fluent-bundle = "0.16"
icu_list = { version = "2.0", default-features = false, features = ["alloc"] }
icu_locale = { version = "2.0", default-features = false }
intl-memoizer = "0.5.1"
redox_ast = { path = "../redox_ast" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_baked_icu_data = { path = "../redox_baked_icu_data" }
redox_data_structures = { path = "../redox_data_structures" }
redox_macros = { path = "../redox_macros" }
redox_serialize = { path = "../redox_serialize" }
redox_span = { path = "../redox_span" }
unic-langid = { version = "0.9.0", features = ["macros"] }
# tidy-alphabetical-end
