[package]
name = "redox_errors"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
annotate-snippets = { version = "0.12.10", features = ["simd"] }
anstream = "0.6.20"
anstyle = "1.0.13"
derive_setters = "0.1.6"
redox_abi = { path = "../redox_abi" }
redox_ast = { path = "../redox_ast" }
redox_data_structures = { path = "../redox_data_structures" }
redox_error_codes = { path = "../redox_error_codes" }
redox_error_messages = { path = "../redox_error_messages" }
redox_hashes = { path = "../redox_hashes" }
redox_index = { path = "../redox_index" }
redox_lint_defs = { path = "../redox_lint_defs" }
redox_macros = { path = "../redox_macros" }
redox_serialize = { path = "../redox_serialize" }
redox_span = { path = "../redox_span" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"
termize = "0.2"
tracing = "0.1"
# tidy-alphabetical-end

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]
