[package]
name = "redox_expand"
version = "0.0.0"
edition = "2024"
build = false

[lib]
doctest = false

[dependencies]
# tidy-alphabetical-start
redox_ast = { path = "../redox_ast" }
redox_ast_passes = { path = "../redox_ast_passes" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_attr_parsing = { path = "../redox_attr_parsing" }
redox_data_structures = { path = "../redox_data_structures" }
redox_errors = { path = "../redox_errors" }
redox_feature = { path = "../redox_feature" }
redox_hir = { path = "../redox_hir" }
redox_lexer = { path = "../redox_lexer" }
redox_lint_defs = { path = "../redox_lint_defs" }
redox_macros = { path = "../redox_macros" }
redox_middle = { path = "../redox_middle" }
redox_parse = { path = "../redox_parse" }
# We must use the proc_macro version that we will compile proc-macros against,
# not the one from our own sysroot.
redox_proc_macro = { path = "../redox_proc_macro" }
redox_serialize = { path = "../redox_serialize" }
redox_session = { path = "../redox_session" }
redox_span = { path = "../redox_span" }
scoped-tls = "1.0"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
# tidy-alphabetical-end
