[package]
name = "redox_feature"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
redox_data_structures = { path = "../redox_data_structures" }
redox_hir = { path = "../redox_hir" }
redox_span = { path = "../redox_span" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"
# tidy-alphabetical-end
