[package]
name = "redox_hir"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
bitflags = "2.9.1"
odht = { version = "0.3.1", features = ["nightly"] }
redox_abi = { path = "../redox_abi" }
redox_arena = { path = "../redox_arena" }
redox_ast = { path = "../redox_ast" }
redox_ast_pretty = { path = "../redox_ast_pretty" }
redox_data_structures = { path = "../redox_data_structures" }
redox_error_messages = { path = "../redox_error_messages" }
redox_hashes = { path = "../redox_hashes" }
redox_hir_id = { path = "../redox_hir_id" }
redox_index = { path = "../redox_index" }
redox_lint_defs = { path = "../redox_lint_defs" }
redox_macros = { path = "../redox_macros" }
redox_serialize = { path = "../redox_serialize" }
redox_span = { path = "../redox_span" }
redox_target = { path = "../redox_target" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
# tidy-alphabetical-end
